# chess

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: board.cpp  board.h  constants.cpp  constants.h  main.cpp  main.h  pieces.cpp  pieces.h  renderer.cpp  renderer.h
